objects/JBCXM__CTATypes__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__CTAAssociationMetaData__c</fullName>
        <description>Used to Store CTA Associated objects details</description>
        <label>CTA Association MetaData</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__CloseMilestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CloseMilestone</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>CloseMilestone</relationshipLabel>
        <relationshipName>CloseMilestone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Color__c</fullName>
        <label>Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__DefaultClosedStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Closed Status</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Default Closed Status</relationshipLabel>
        <relationshipName>DefaultClosedStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__DefaultOpenStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Open Status</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Default Open Status</relationshipLabel>
        <relationshipName>DefaultOpenStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__DefaultPriority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Priority</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Default Priority</relationshipLabel>
        <relationshipName>DefaultPriority</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__DefaultReason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Reason</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Default Reason</relationshipLabel>
        <relationshipName>DefaultReason</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__DefaultSnoozeReason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Snooze Reason</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Default Snooze Reason</relationshipLabel>
        <relationshipName>DefaultSnoozeReason</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <defaultValue>&quot;GLOBAL&quot;</defaultValue>
        <label>Entity Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ForSuccessPlan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies CTA type for success plan objective</description>
        <label>Success plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check to activate / Uncheck to deactivate.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__OpenMilestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpenMilestone</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>OpenMilestone</relationshipLabel>
        <relationshipName>OpenMilestone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__PluralLabel__c</fullName>
        <label>Plural label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recurring will be used to determine a CTA supports recurring. True and False are the possible values</description>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Relationship CTAType</relationshipLabel>
        <relationshipName>RelationshipCTAType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ReportCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Category</label>
        <referenceTo>JBCXM__GSReportCategory__c</referenceTo>
        <relationshipLabel>CTA Type</relationshipLabel>
        <relationshipName>CTATypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SystemDefined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies prep-packed types</description>
        <label>System defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__TaskAssociationMetaData__c</fullName>
        <description>To Store task configuration associated meta data</description>
        <label>Task Association MetaData</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTA Type</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__Color__c</columns>
        <columns>JBCXM__DisplayOrder__c</columns>
        <columns>JBCXM__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CTA Types Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CTA Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>